creando comentarios, denormalizacion de la cantidad de comentarios

--- a/client/views/posts/post_page.html
+++ b/client/views/posts/post_page.html
@@ -5,4 +5,9 @@
         {{> comment}}
         {{/each}}
     </ul>
+    {{#if currentUser}}
+        {{> commentSubmit}}
+    {{else}}
+        <p>Iniciar sesion para comentar.</p>
+    {{/if}}
 </template>
