--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,7 +1,10 @@
 <template name="postsList">
     <div class="posts">
         {{#each posts}}
-        {{> postItem}}
+            {{> postItem}}
         {{/each}}
+        {{#if nextPath}}
+            <a class="load-more" href="{{nextPath}}">Cargar mas</a>
+        {{/if}}
     </div>
 </template>
