--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -38,7 +38,9 @@ body {
     -o-transition: all 300ms 0ms ease-in;
     transition: all 300ms 0ms ease-in;
     position: relative;
-    opacity: 1; }
+    opacity: 1;
+    background-color: lighten(#000, 94%);
+}
 .post:before, .post:after {
     content: "";
     display: table; }
@@ -74,6 +76,12 @@ body {
 .comments {
     list-style-type: none;
     margin: 0; }
+.comments li {
+  background-color: lighten(#000, 99%);
+}
+.comments li:nth-child(even) {
+  background-color: lighten(#000, 98%);
+}
 .comments li h4 {
     font-size: 16px;
     margin: 0; }
