--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,9 +1,17 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Microscope</title>
+</head>
+
 <template name="layout">
-    <div class="container">
-        {{> header}}
-        {{> errors}}
-        <div id="main" class="row-fluid">
-            {{> yield}}
-        </div>
-    </div>
+
+    <!--[if lt IE 9]>
+        <p class="browser-warning"><strong><i class="icon-exclamation-sign"></i> Warning</strong> - You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to properly view this website.</p>
+    <![endif]-->
+
+    {{> header}}
+    {{> errors}}
+    {{> yield}}
+
+
 </template>
