--- a/client/views/includes/errors.html
+++ b/client/views/includes/errors.html
@@ -1,8 +1,12 @@
 <template name="errors">
-    <div class="errors row-fluid">
-        {{#each errors}}
-        {{> error}}
-        {{/each}}
+    <div class="container">
+        <div id="main" class="row-fluid">
+            <div class="errors">
+                {{#each errors}}
+                    {{> error}}
+                {{/each}}
+            </div>
+        </div>
     </div>
 </template>
 
