--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,14 +1,12 @@
 <template name="header">
-    <header class="navbar">
-        <div class="navbar-inner">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="{{pathFor 'postsList'}}">Microscope</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
+    <header class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{{pathFor 'postsList'}}">Publicaciones</a>
+            </div>
+
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
                     {{#if currentUser}}
                         <li>
                             <a href="{{pathFor 'postSubmit'}}">New</a>
@@ -18,8 +16,8 @@
                         </li>
                     {{/if}}
                 </ul>
-                <ul class="nav pull-right">
-                    <li>{{>loginButtons}}</li>
+                <ul class="nav navbar-nav navbar-right">
+                    {{>accountButtons}}
                 </ul>
             </div>
         </div>
