--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -1,6 +1,6 @@
 <template name="postItem">
     <div class="post">
-        <div class="upvote btn {{upvotedClass}}">⬆</div>
+        <div class="upvote btn btn-primary {{upvotedClass}}">⬆</div>
         <div class="post-content">
             <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
             <p>
@@ -10,6 +10,6 @@
                 {{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
             </p>
         </div>
-        <a href="{{pathFor 'postPage'}}" class="discuss btn">Discuss</a>
+        <a href="{{pathFor 'postPage'}}" class="discuss btn btn-default">Discuss</a>
     </div>
 </template>
