modificacion en post_page

--- a/client/main.less
+++ b/client/main.less
@@ -1,2 +1,17 @@
 @import "/packages/bootstrap3-less/bootstrap.import.less";
 // @body-bg: grey;
+.comments {
+  padding:0;
+  background-color: lighten(#000, 99%);
+}
+.comments li {
+  background: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+/*
+
+.comments li:nth-child(even) {
+  background-color: lighten(#000, 98%);
+}*/
