--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -75,12 +75,7 @@ body {
 
 .comments {
     list-style-type: none;
-    margin: 0; }
-.comments li {
-  background-color: lighten(#000, 99%);
-}
-.comments li:nth-child(even) {
-  background-color: lighten(#000, 98%);
+    margin: 0;
 }
 .comments li h4 {
     font-size: 16px;
