--- a/client/views/comments/comment_submit.html
+++ b/client/views/comments/comment_submit.html
@@ -1,15 +1,10 @@
 <template name="commentSubmit">
     <form name="comment" class="comment-form">
-        <div class="control-group">
-            <div class="controls">
-                <label for="body">Comment on this post</label>
-                <textarea name="body"></textarea>
-            </div>
+        <div class="form-group">
+            <textarea class="form-control" name="body"></textarea>
         </div>
-        <div class="control-group">
-            <div class="controls">
-                <button type="submit" class="btn">Add Comment</button>
-            </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Agregar Comentario</button>
         </div>
     </form>
 </template>
