--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,13 +1,15 @@
 <template name="postsList">
     <div class="container">
-        <div id="main" class="row-fluid">
-            <div class="posts">
-                {{#each posts}}
-                    {{> postItem}}
-                {{/each}}
-                {{#if nextPath}}
-                    <a class="load-more" href="{{nextPath}}">Cargar mas</a>
-                {{/if}}
+        <div id="main" class="row">
+            <div class="col-md-12">
+                <div class="posts">
+                    {{#each posts}}
+                        {{> postItem}}
+                    {{/each}}
+                    {{#if nextPath}}
+                        <a class="load-more" href="{{nextPath}}">Cargar mas</a>
+                    {{/if}}
+                </div>
             </div>
         </div>
     </div>
