--- a/client/views/includes/errors.html
+++ b/client/views/includes/errors.html
@@ -1,7 +1,7 @@
 <template name="errors">
     <div class="container">
-        <div id="main" class="row-fluid">
-            <div class="errors">
+        <div class="row">
+            <div class="col-md-12">
                 {{#each errors}}
                     {{> error}}
                 {{/each}}
@@ -11,7 +11,7 @@
 </template>
 
 <template name="error">
-    <div class="alert alert-error">
+    <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{message}}
     </div>
