--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -2,7 +2,7 @@
     <div class="post">
         <div class="upvote btn btn-primary {{upvotedClass}}">⬆</div>
         <div class="post-content">
-            <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
+            <h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
             <p>
                 {{pluralize votes "Vote"}},
                 submitted by {{author}},
@@ -10,6 +10,5 @@
                 {{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
             </p>
         </div>
-        <a href="{{pathFor 'postPage'}}" class="discuss btn btn-default">Discuss</a>
     </div>
 </template>
