--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -1,34 +1,23 @@
 <template name="postSubmit">
     <div class="container">
-        <div id="main" class="row-fluid">
-            <form class="main">
-                <div class="control-group">
-                    <label class="control-label" for="url">URL</label>
-                    <div class="controls">
-                        <input name="url" type="text" value="" placeholder="Your URL"/>
+        <div class="row">
+            <div class="col-md-6">
+                <form class="main">
+                    <div class="form-group">
+                        <label class="control-label" for="title">Titulo</label>
+                        <input class="form-control" name="title" type="text" value=""/>
                     </div>
-                </div>
 
-                <div class="control-group">
-                    <label class="control-label" for="title">Title</label>
-                    <div class="controls">
-                        <input name="title" type="text" value="" placeholder="Name your post"/>
+                    <div class="form-group">
+                        <label class="control-label" for="message">Mensaje</label>
+                        <textarea class="form-control" name="message" type="text" value=""></textarea>
                     </div>
-                </div>
 
-                <div class="control-group">
-                    <label class="control-label" for="message">Message</label>
-                    <div class="controls">
-                        <textarea name="message" type="text" value=""></textarea>
-                    </div>
-                </div>
-
-                <div class="control-group">
-                    <div class="controls">
+                    <div class="form-group">
                         <input type="submit" value="Submit" class="btn btn-primary"/>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </template>
