--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -2,10 +2,16 @@
     <header class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="{{pathFor 'postsList'}}">Publicaciones</a>
             </div>
 
-            <div class="navbar-collapse collapse">
+            <div id="main-navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     {{#if currentUser}}
                         <li>
